# kaiju

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
resources/: default_config.toml
resources/web/: index.css  index.html  index.js
src/: ask_user_edit.rs  board.rs  config.rs  issue_code.rs  jira_api.rs  local_jira_cache.rs  main.rs
src/commands/: create_issue.rs  edit_config.rs  mod.rs  open.rs  open_board.rs
src/commands/open_board/: static_files.rs
