[package]
name = "kaiju"
version = "0.1.0"
edition = "2021"
description = "A simpler and more direct Web UI alternative for Atlassian's Jira website"
repository = "https://github.com/sitegui/kaiju"
license = "MIT OR Apache-2.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
keywords = ["jira", "terminal", "issue-tracker", "web-interface"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
clap = { version = "4.0.13", features = ["derive"] }
directories = "4.0.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
shell-words = "1.1.0"
time = "0.3.14"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
