[package]
name = "kaiju"
version = "0.2.0"
edition = "2021"
description = "A simpler and more direct Web UI alternative for Atlassian's Jira website"
repository = "https://github.com/sitegui/kaiju"
license = "MIT OR Apache-2.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
keywords = ["jira", "terminal", "issue-tracker", "web-interface"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = { version = "1.0.65", features = ["backtrace"] }
clap = { version = "4.0.15", features = ["derive"] }
directories = "4.0.1"
futures = "0.3.24"
itertools = "0.10.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
shell-words = "1.1.0"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
