[package]
name = "kaiju"
version = "0.9.2"
edition = "2021"
description = "A simpler and more direct Web UI alternative for Atlassian's Jira website"
repository = "https://github.com/sitegui/kaiju"
license = "MIT OR Apache-2.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
keywords = ["jira", "terminal", "issue-tracker", "web-interface"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
axum = "0.5.16"
clap = { version = "4.0.15", features = ["derive"] }
directories = "4.0.1"
futures = "0.3.24"
itertools = "0.10.5"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.93"
shell-words = "1.1.0"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
